@@ -15,6 +15,7 @@ import com.planet_ink.coffee_mud.Items.interfaces.*;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
+
 import java.util.*;
 
 /*
@@ -34,19 +35,73 @@ import java.util.*;
 */
 public class GrinderAreas
 {
-	public static String getAreaList(final Enumeration<Area> a, final Area pickedA, final MOB mob, final boolean noInstances)
+	public static String getAreaList(final Enumeration<Area> a, final Area pickedA, final MOB mob, final boolean noInstances, final boolean asTree)
 	{
 		final StringBuffer AreaList=new StringBuffer("");
 		final boolean anywhere=(CMSecurity.isAllowedAnywhere(mob,CMSecurity.SecFlag.CMDROOMS)||CMSecurity.isAllowedAnywhere(mob,CMSecurity.SecFlag.CMDAREAS));
 		final boolean everywhere=(CMSecurity.isASysOp(mob)||CMSecurity.isAllowedEverywhere(mob,CMSecurity.SecFlag.CMDROOMS)||CMSecurity.isAllowedEverywhere(mob,CMSecurity.SecFlag.CMDAREAS));
+		final XTreeSet<Area> alsoShowAreas=new XTreeSet<Area>();
+		if((asTree)&&(pickedA!=null))
+		{
+			alsoShowAreas.add(pickedA);
+			alsoShowAreas.addAll(pickedA.getParentsRecurse());
+		}
 		for(;a.hasMoreElements();)
 		{
 			final Area A=a.nextElement();
 			if((everywhere||(A.amISubOp(mob.Name())&&anywhere))
 			&&((!noInstances)||(!CMath.bset(A.flags(), Area.FLAG_INSTANCE_CHILD))))
 			{
-				if((pickedA!=null)&&(pickedA==A))
-					AreaList.append("<OPTION SELECTED VALUE=\""+A.Name()+"\">"+A.name());
+				if((pickedA!=null)
+				&&((pickedA==A))||(alsoShowAreas.contains(A)))
+				{
+					if(pickedA==A)
+						AreaList.append("<OPTION SELECTED VALUE=\""+A.Name()+"\">"+A.name());
+					else
+						AreaList.append("<OPTION VALUE=\""+A.Name()+"\">"+A.name());
+					if(asTree)
+					{
+						final XLinkedList<Area> remainder = new XLinkedList<Area>(A.getChildren());
+						final Comparator<Area> childComparator = new Comparator<Area>(){
+							@Override
+							public int compare(Area o1, Area o2)
+							{
+								return o1.Name().compareTo(o2.Name());
+							}
+						};
+						Collections.sort(remainder, childComparator);
+						int countDownToSpaceUp = remainder.size();
+						int spaceCount = 1;
+						boolean addKids = pickedA==A;
+						while(remainder.size()>0)
+						{
+							final Area cA=remainder.removeFirst();
+							if((everywhere||(cA.amISubOp(mob.Name())&&anywhere))
+							&&((!noInstances)||(!CMath.bset(cA.flags(), Area.FLAG_INSTANCE_CHILD)))
+							&&((alsoShowAreas.contains(cA))||addKids))
+							{
+								if(pickedA==cA)
+								{
+									AreaList.append("<OPTION SELECTED VALUE=\""+cA.Name()+"\">");
+									remainder.clear();
+									countDownToSpaceUp=1;
+									addKids = true;
+								}
+								else
+									AreaList.append("<OPTION VALUE=\""+cA.Name()+"\">");
+								final XLinkedList<Area> children = new XLinkedList<Area>(cA.getChildren());
+								Collections.sort(children, childComparator);
+								remainder.addAll(children);
+								AreaList.append(CMStrings.repeat('-', spaceCount)).append(cA.Name());
+							}
+							if(--countDownToSpaceUp == 0)
+							{
+								countDownToSpaceUp=remainder.size();
+								spaceCount++;
+							}
+						}
+					}
+				}
 				else
 					AreaList.append("<OPTION VALUE=\""+A.Name()+"\">"+A.name());
 			}
